language_tests/source_files/valid/returns.tr
// CHECK_ONLY

import std.optional.Optional

func choose(_ flag: bool) -> int32 {
    let value = if flag {
        return 7
    } else {
        3
    }
    value
}

func classify(_ value: int32) -> int32 {
    match value {
        case 0 => return 1
        case _ => 2
    }
}

func testWithLocal(current: int32, end: int32) -> Optional[int32] {
    if current < end {
        let value = current
        return Optional.some(value)
    }
    return Optional.none
}

func main() {
    let _ = choose(false)
    let _ = classify(0)
    let _ = testWithLocal(current: 0, end: 5)
}
